# solidify

./: Cargo.toml  README.md
src/: cli.rs  main.rs  params.rs  warnings.rs
src/solidifier/: keys.rs  mod.rs  sheet.rs
src/strings/: countable.rs  literally.rs  mod.rs
